--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ text-align: center;
 line-height: 1.25;
 }
 
+h1 {
+    font-size: 36px;
+}
+
 p {
     line-height: 1.5;
     font-size: 16px;
@@ -33,6 +37,10 @@ flex-1 {
     max-width: 800px;
     margin: 0 auto;
 }
+
+.text--purple {
+    color: rgb(206, 1, 1);
+}
 /*NAVIGATION BAR */
 nav {
     height: 100px;
@@ -49,26 +57,26 @@ nav {
 
 .nav__link--anchor {
     margin: 0 12px; 
-    color: #242424;
+    color: rgb(192, 7, 7);
     text-decoration: none;
     font-weight:  700;
 
 }
 
 .nav__link--anchor-primary {
-    background-color: #6030b1;
+    background-color: rgb(192, 7, 7);
     padding: 8px 20px;
     border-radius: 50px;
     color: white;
     transition: all 300ms ease;
 }
 .nav__link--anchor-primary:hover {
-    background-color: #5d3eff;    
+    background-color: black;    
 }
 
 .personal__logo {
     font-size: 24px;
-    color: #6030b1;
+    color: rgb(192, 7, 7);
     margin: 0 12px;
     font-weight: bold;
 }
@@ -86,6 +94,9 @@ display: flex;
 flex-direction: column;
 justify-content: center;
 align-items: center;
+max-width: 600px;
+margin: 0 auto;
+text-align: center;
 }
 
 .about-me__picture--mask {
@@ -93,6 +104,8 @@ align-items: center;
     height: 110px;
     border-radius: 50%;
     overflow: hidden;
+    box-shadow: 0 8px 16px rgba(0,0,0,.50);
+    margin-bottom: 28px;
     
 }
 
@@ -104,4 +117,12 @@ align-items: center;
 /* IMPROVING MY OWN PICTURE*/
 transform: scale(1.5);
 padding-top: 8px;
+}
+
+.about-me__info--title {
+    margin-bottom: 16px;
+}
+.about-me__info--para {
+    font-size: 20px;
+    margin-bottom: 28px;
 }
