--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ flex-1 {
 }
 
 .text--purple {
-    color: rgb(206, 1, 1);
+    color: #3b522f;
 }
 /*NAVIGATION BAR */
 nav {
@@ -57,14 +57,14 @@ nav {
 
 .nav__link--anchor {
     margin: 0 12px; 
-    color: rgb(192, 7, 7);
+    color: #3b522f;
     text-decoration: none;
     font-weight:  700;
 
 }
 
 .nav__link--anchor-primary {
-    background-color: rgb(192, 7, 7);
+    background-color: #3b522f;
     padding: 8px 20px;
     border-radius: 50px;
     color: white;
@@ -76,7 +76,7 @@ nav {
 
 .personal__logo {
     font-size: 24px;
-    color: rgb(192, 7, 7);
+    color: #3b522f;
     margin: 0 12px;
     font-weight: bold;
 }
@@ -87,6 +87,12 @@ nav {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+}
+
+.about-me__info{
+    display: flex;
+    flex-direction: column;
+
 }
 
 .about-me__info--container {
@@ -126,3 +132,25 @@ padding-top: 8px;
     font-size: 20px;
     margin-bottom: 28px;
 }
+
+.about-me__link {
+    font-size: 20px;
+    color: #242424;
+    text-decoration: none;
+    padding: 0 16px;
+}
+
+.about-me__img--container {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transform: scale(0.7);
+}
+
+.about-me__img {
+    width: 100%;
+}
+
+
+
