--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 h1, h2, h3, h4, h5, h6 span {
 color: #242424;
 text-align: center;
@@ -20,6 +24,29 @@ p {
     line-height: 1.5;
     font-size: 16px;
 }
+
+a {
+  text-decoration: underline transparent;
+  transition: text-decoration-color 0.3s ease;
+  position: relative;
+}
+   
+}
+
+.link__hover-effect:after {
+    content: "";
+    position: absolute;
+    height: 3px;
+    background-color: #3b522f
+    width: 0;
+    bottom: -3px;
+    left: 0;
+}
+
+.link__hover-effect:after {
+    width: 100%;
+}
+
 
 li {
     list-style-type: none;
@@ -69,7 +96,6 @@ nav {
 .nav__link--anchor {
     margin: 0 12px; 
     color: #3b522f;
-    text-decoration: none;
     font-weight:  700;
 
 }
@@ -147,7 +173,6 @@ padding-top: 8px;
 .about-me__link {
     font-size: 20px;
     color: #242424;
-    text-decoration: none;
     padding: 0 16px;
 }
 
@@ -291,7 +316,7 @@ margin-bottom: 135px;
 .project__description--link {
     font-size: 20px;
     margin-right: 16px;
-    text-decoration: none;
+
 
 }
 
@@ -310,5 +335,54 @@ color: #fff;
 }
 
 
+ /* FOOTER */
 
+ footer {
+    background-color: #3b522f;
+ }
 
+ .footer__social--list {
+    width: 100%;
+    max-width: 500px;
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: 28px;
+ }
+
+ .footer__row {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 8% 0;
+ }
+
+.footer__logo--img {
+    width: 200px;
+    height: 200px;
+}
+
+.footer__social--link,
+.footer__copyright,
+.footer__logo--popper {
+    color: silver;
+}
+
+.footer__logo--popper {
+    position: absolute;
+    right: 0;
+    top: 30px;
+    font-weight: 700;
+    opacity: 0;
+    transition: all 300ms ease;
+}
+
+.footer__anchor {
+    margin-bottom: 50px;
+    position: relative;
+}
+
+.footer__anchor:hover .footer__logo--popper {
+    transform: translateX(60px);
+    opacity: 1;
+}
