--- a/style.css
+++ b/style.css
@@ -26,25 +26,30 @@ p {
 }
 
 a {
-  text-decoration: underline transparent;
-  transition: text-decoration-color 0.3s ease;
+  text-decoration: none;
+  transition: opacity 300ms ease;
   position: relative;
 }
-   
+
+i:hover {
+    opacity: 0.7;
 }
+   
 
 .link__hover-effect:after {
     content: "";
     position: absolute;
     height: 3px;
-    background-color: #3b522f
+    background-color: black;
     width: 0;
     bottom: -3px;
-    left: 0;
+    right: 0;
+    transition: all 300ms ease;
 }
 
-.link__hover-effect:after {
+.link__hover-effect:hover:after {
     width: 100%;
+    left: 0;
 }
 
 
@@ -66,6 +71,7 @@ li {
     width: 100%;
     max-width: 800px;
     margin: 0 auto;
+    padding:0 12px;
 }
 
 .text--purple {
@@ -88,6 +94,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 0 12px;
 }
 .nav__link--list {
     display: flex;
@@ -97,7 +104,6 @@ nav {
     margin: 0 12px; 
     color: #3b522f;
     font-weight:  700;
-
 }
 
 .nav__link--anchor-primary {
@@ -149,31 +155,66 @@ text-align: center;
     overflow: hidden;
     box-shadow: 0 8px 16px rgba(0,0,0,.50);
     margin-bottom: 28px;
+    animation: animate-prof-pic 800ms 200ms backwards;
     
 }
+
+@keyframes animate-prof-pic {
+    0% {
+        transform: scale(0);
+    }
+
+    80% {
+        transform: scale(1.1);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+
+}
+/* IMPROVING MY OWN PICTURE*/
 
 .about-me__picture {
     width: 100%;
     height: 100%;
-
-
-/* IMPROVING MY OWN PICTURE*/
-transform: scale(1.5);
-padding-top: 8px;
+    transform: scale(1.5);
+    padding-top: 8px;
 }
 
 .about-me__info--title {
     margin-bottom: 16px;
+    animation: fade-up 650ms 400ms backwards;
 }
 .about-me__info--para {
     font-size: 20px;
     margin-bottom: 28px;
+     animation: fade-up 650ms 600ms backwards;
 }
 
 .about-me__link {
     font-size: 20px;
     color: #242424;
     padding: 0 16px;
+     animation: fade-up 650ms 400ms backwards;
+}
+
+.about-me__links {
+     animation: fade-up 650ms 800ms backwards;
+}
+
+
+@keyframes fade-up {
+    0% {
+        opacity: 0;
+        transform: translateY(40px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+
 }
 
 .about-me__img--container {
@@ -186,7 +227,39 @@ padding-top: 8px;
 
 .about-me__img {
     width: 100%;
+    animation: fade-in 1200ms 800ms backwards;
 }
+
+@keyframes fade-in {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+
+}
+
+.wave {
+    display: inline-block;
+    animation: animate-wave 500ms infinite ease-in-out;
+}
+
+@keyframes animate-wave {
+    0% {
+        transform: rotate(0);
+    }
+
+    50% {
+        transform: rotate(30deg);
+    }
+
+    100% {
+        transform: rotate(0);
+    }
+}
+
 
 /* TECH STACK */
 
@@ -218,7 +291,8 @@ transform: scale(0.9);
 }
 
 .language__list {
-    display: flex;  
+    display: flex; 
+    justify-content: center; 
     width: 100%;
     flex-wrap: wrap; 
 }
@@ -338,7 +412,7 @@ color: #fff;
  /* FOOTER */
 
  footer {
-    background-color: #3b522f;
+    background-color:#4d0000 ;
  }
 
  .footer__social--list {
@@ -354,13 +428,23 @@ color: #fff;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 8% 0;
+    padding: 4% 0;
  }
 
 .footer__logo--img {
-    width: 200px;
-    height: 200px;
-}
+    width: 300px;
+    height: 300px;
+    object-fit:contain;
+    border-radius: 50%;
+    overflow: hidden;
+    margin-top: 50px;
+    box-shadow: 0px 1px 0px #4d0000;
+    transition: box-shadow 0.3s ease-in-out;
+    }
+
+    .footer__logo--img:hover {
+        box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
+    }
 
 .footer__social--link,
 .footer__copyright,
@@ -385,4 +469,78 @@ color: #fff;
 .footer__anchor:hover .footer__logo--popper {
     transform: translateX(60px);
     opacity: 1;
+}
+
+/* Small phones, tablets,lrge samrtphones */
+
+@media (max-width: 768px) {
+    nav {
+        height: 68px;
+    }
+
+    h1 {
+        font-size: 28px;
+    }
+
+    .about-me__info--para {
+        font-size: 18px;
+    }
+
+    .language {
+        width: calc(100% / 3);
+    }
+    
+    .project__description--para {
+    font-size:14px;
+    }
+    
+    .project__description {
+        left: 80px;
+        padding:4px;
+    }
+
+    .project__list {
+        padding: 24px;
+    }
+
+}
+
+/* SMALL PHONES */
+
+@media (max-width:480px) {
+    .nav__link:not(:last-child) {
+        display: none;
+    }
+
+    .project__description {
+        padding: 0;
+        left: 0;
+        width: 100%;
+    }
+
+    .project__description--para {
+        display: none;
+       
+    }
+
+    .project__description--links{
+        display: flex;
+        justify-content: center;
+    }
+
+    .project__description--title {
+        font-size: 32px;
+        line-height: 1; 
+        text-align: center;
+    }
+    
+    .project__description--sub-title {
+        text-align: center;
+        margin: 12px 0;
+
+    }
+
+    .about-me__info--container {
+        margin-top: 40px;
+    }
 }
